// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaveDetails Caring Leave renders documentation hint correctly with family relationship 1`] = `
Array [
  <p
    key="p-0"
  >
    To meet 
    <a
      href="https://www.mass.gov/info-details/employer-paid-leave-application-review-guide"
      key="1"
      rel="noopener"
      target="_blank"
    >
      federal laws and regulations
    </a>
    , you must keep medical records separate and confidential from any personnel files.
  </p>,
  <p
    key="p-1"
  >
    View the family relationship on page 3.
  </p>,
]
`;

exports[`LeaveDetails Caring Leave renders relationship question when showCaringLeaveType flag is true 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="3"
  >
    Care for a family member
  </ReviewRow>
  <ReviewRow
    label="Application ID"
    level="3"
  >
    NTN-111-ABS-01
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="3"
  >
    1/1/2021 – 7/1/2021
  </ReviewRow>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "I don't know",
          "value": "Unknown",
        },
        Object {
          "checked": false,
          "label": "No (comment required)",
          "value": "No",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "eligible-relationship-link": <a />,
          }
        }
        i18nKey="components.employersLeaveDetails.familyMemberRelationshipHint"
      />
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you believe the listed relationship is described accurately? (Optional)
      </ReviewHeading>
    }
    name="believeRelationshipAccurate"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
  />
  <ConditionalContent
    clearField={[Function]}
    getField={[Function]}
    updateFields={[Function]}
    visible={false}
  >
    <Alert
      className="measure-5 margin-bottom-3 margin-top-3"
      heading="The employee will be denied paid leave."
      headingSize="3"
      state="warning"
    >
      We take allegations about false relationships seriously. Choosing No may trigger a denial of the employee's application for paid leave. The employee has the right to appeal if their application is denied.
    </Alert>
    <FormLabel
      className="usa-label"
      htmlFor="comment"
      small={true}
    >
      Tell us why you think this relationship is inaccurate.
    </FormLabel>
    <textarea
      className="usa-textarea margin-top-3"
      name="relationshipInaccurateReason"
      onChange={[Function]}
    />
  </ConditionalContent>
</Fragment>
`;

exports[`LeaveDetails renders the component 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="3"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Application ID"
    level="3"
  >
    NTN-111-ABS-01
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="3"
  >
    1/1/2021 – 7/1/2021
  </ReviewRow>
</Fragment>
`;

exports[`LeaveDetails renders the emergency regs content when claim is for Bonding 1`] = `
Array [
  "If so, this employee may be eligible to take their paid family leave anytime in 2021, ",
  <a
    href="https://www.mass.gov/pfml-acute-employer"
    key="1"
    rel="noopener"
    target="_blank"
  >
    due to emergency Covid-19 regulations for hospital workers
  </a>,
  ".",
]
`;

exports[`LeaveDetails when there are documents renders documentation hint correctly with family relationship 1`] = `
Array [
  "To meet ",
  <a
    href="https://www.mass.gov/info-details/employer-paid-leave-application-review-guide"
    key="1"
    rel="noopener"
    target="_blank"
  >
    federal laws and regulations
  </a>,
  ", you must keep medical records separate and confidential from any personnel files.",
]
`;
